# probate-ai-project-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  shuffle.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
probate_ops/: main.py
probate_ops/controllers/: analyze.py  ask.py  chart.py  flows.py  ingest.py  shortlist.py
probate_ops/core/: database.py  registry.py  settings.py  storage.py
probate_ops/flows/: dataviz.py  full_enrich.py
probate_ops/models/: api.py  database.py
probate_ops/scripts/publiclandscraper/: requirements.txt  scraper.py
probate_ops/scripts/publiclandscraper/scraper/: scraper.py
probate_ops/scripts/scraper/: requirements.txt  scraper.py
probate_ops/tools/: df_tool.py  llm_score_tool.py  sql_tool.py
probate_ops/utils/: database.py  normalize.py
service_name/: main.py
tests/: test_main.py
