[tool.poetry]
name = "probate-ops"
version = "0.1.0"
description = "A Microservice that Handles AI / Data Enrichement Operations"
authors = ["Adam MABROUK <adam@aigents.services>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.27" }
pydantic = "^2.0"
python-dotenv = "^1.0"
requests = "^2.32.3"
httpx = "^0.28.1"
langgraph = "^0.6.5"
pandas = "^2.3.1"
openai = "^1.99.9"
duckdb = "^1.3.2"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
selenium = "^4.35.0"
webdriver-manager = "^4.0.2"
lxml = "^6.0.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.30"
websockets = "^15.0.1"
peewee = "^3.18.2"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
pylint = "^3.3.7"
ruff = "^0.11.9"
mypy = "^1.15.0"
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
